fixed tap hightlighting on mobile

--- a/src/app/controller/controller.component.css
+++ b/src/app/controller/controller.component.css
@@ -11,13 +11,52 @@ body {
 }
 
 .volume-icon {
-    cursor: pointer;
-    height: 60px;
-    transform: rotate(0deg);
-    transform-origin: center left;
-    width: 60px;
+  cursor: pointer;
+  height: 60px;
+  transform: rotate(0deg);
+  transform-origin: center left;
+  width: 60px;
+  -webkit-user-select: none; /* disable selection/Copy of UIWebView */
+  -webkit-touch-callout: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+  supported by Chrome and Opera */
+    background-color: white;
+  border: none;
+  outline:none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+-webkit-tap-highlight-color: transparent;
+  }
+
+
+.noselect:hover {
+  background-color: white;
+  border: none;
+outline:none;
+}
+
+.noselect:active {
+  background-color: white;
+  border: none;
+outline:none;
+}
+
+.noselect:focus {
+  background-color: white;
+  border: none;
+outline:none;
+
+}
 .volume-icon .volume-icon-bg {
     fill: #cbc8ce;
     transition: fill 300ms;
